--- a/4color/index.html
+++ b/4color/index.html
@@ -15,6 +15,10 @@
 
   <body>
     <script src="sketch.js"></script>
+    <div style="position: absolute; top: 0; right: 0; width: 260px; height: 180px; background-color: #00000020; display: flex; justify-content: space-evenly;">
+      <img src="../assets/kamva.png" alt="kamva" width="60px" height="75px">
+      <h1 style="font-family: vazir; text-align: center; margin-top: 1rem;">‏۴ رنگ آمیزی</h1>
+    </div>
     <img id="arrow" src="assets/arrow.svg" />
   </body>
 </html>
