--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div style="display: flex; align-items: center; justify-content: center; height: 100%; background-color: grey;">
+  <div style="display: flex; align-items: center; justify-content: center; height: 100vh; background-color: grey;">
     <div class="container">
       <div id="sudoku" class="sudoku-container">
         <div class="sudoku-item" inputmode="numeric"></div>
@@ -194,11 +194,11 @@
           <div style="font-size: 30px;">
             <label>
               <input id="help" type="checkbox">
-              <span>راهنمــایــــی</span>
+              <span>راهنمــــــــــا</span>
             </label>
           </div>
           <div style="font-size: 30px;" id="reset">
-            <button>شروع دوباره</button>
+            <button style="width: 100%;">شروع دوباره</button>
           </div>
         </div>
         <img src="../assets/kamva.png" alt="kamva" width="120px" height="150px">
