Fix touch issues

--- a/n-queens/index.html
+++ b/n-queens/index.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-    <main>
+    <main id="main">
       <div class="panel">
         <h1>‏۸ وزیر</h1>
         <button id="reset">شروع دوباره</button>
